# image_to_pptx

./: .gitignore  CLAUDE.md  README.md  config.example.toml  pyproject.toml
.claude/: settings.local.json
docs/: config.md  notes.md  plan.md  prompts.md
docs/modules/: README.md  config.md  enrichment.md  extraction.md  inpainting.md  main.md  masking.md  ocr.md  pipeline.md  pptx_helpers.md  reconstruction.md  retry.md  schemas.md
installer/: build.bat  config.toml.template  setup.iss  slide_text_replacer.spec
scripts/: run.bat  setup.bat
src/slide_text_replacer/: __init__.py  __main__.py  config.py  enrichment.py  extraction.py  inpainting.py  masking.py  ocr.py  pipeline.py  pptx_helpers.py  reconstruction.py  retry.py  schemas.py
tests/: README.md  conftest.py  test_config.py  test_enrichment.py  test_extraction.py  test_gemini_api.py  test_inpainting.py  test_integration_full.py  test_integration_overlay.py  test_integration_removal.py  test_main.py  test_masking.py  test_ocr.py  test_pipeline.py  test_pptx_helpers.py  test_reconstruction.py  test_replicate_api.py  test_retry.py  test_schemas.py
tests/fixtures/: sample_enriched.json  sample_ocr.json
