[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "slide-text-replacer"
version = "0.1.0"
description = "Erase baked-in text from PPTX slides and overlay editable Hebrew/RTL text boxes"
requires-python = ">=3.11"
dependencies = [
    "python-pptx>=0.6.23",
    "Pillow>=10.0",
    "requests>=2.31",
]

[project.scripts]
slide-text-replacer = "slide_text_replacer.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
    "api: live API health-check tests (skip by default, run with: pytest -m api)",
    "integration: integration tests requiring real PPTX + API keys (skip by default, run with: pytest -m integration)",
]
addopts = "-m 'not api and not integration'"
